@@ -27,7 +27,7 @@ import org.springframework.beans.factory.support.AbstractBeanFactory;
  * @version $RevisionId$
  * REQUIRES THE FOLLOWING BEAN DEFINITIONS:
  * see lbiinit
- * @version $Id: AbstractBeanFactoryTests.java,v 1.1.1.1 2003-08-14 16:21:05 trisberg Exp $
+ * @version $Id: AbstractBeanFactoryTests.java,v 1.2 2003-09-06 17:06:22 johnsonr Exp $
  */
 public abstract class AbstractBeanFactoryTests extends TestCase {
 
@@ -254,7 +254,7 @@ public abstract class AbstractBeanFactoryTests extends TestCase {
 	 * Check that passthrough values work
 	 * @throws Exception
 	 */
-	public void testFactoryPassesThroughPropertyValues() throws Exception {
+	public void testPassthroughFactoryPassesThroughPropertyValues() throws Exception {
 		TestBean tb = (TestBean) getBeanFactory().getBean("factoryPassThrough");
 		assertTrue("Name property was passed through: incorrect value was '" + tb.getName() + "'", 
 				tb.getName().equals("passThrough"));
